@@ -1,3 +1,6 @@
+[B]2.0.2[/B]
+- Added the "unsorted" method as default instead of title
+
 [B]2.0.1[/B]
 - Webtv/Archive section "more" indexer fixed
 - Added episodes' sorting by title
